--- a/usuario.html
+++ b/usuario.html
@@ -51,6 +51,7 @@
               </nav>
         </div>
     </header>
+    <h1>HOLA ESTA ES LA PÁGINA DE USUARIOS</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
