linkeada la página de usuarios en pa ppal

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
               </nav>
         </div>
     </header>
+    <h2>Esta es la página de Usuarios del Sistema</h2>
+    <a href="usuario.html">USUARIOS</a>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
